Add nodeAndExpress backend projects and gitignore

--- a/JavaScript/classList/index.html
+++ b/JavaScript/classList/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1 id = "myH1">Hello</h1>
     <button id = "myButton">My Button</button>
-    <script src = "callList.js"></script>
+    <script src = "classList.js"></script>
 </body>
 </html>
